--- a/about.html
+++ b/about.html
@@ -90,7 +90,10 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="about-image">
-                        <img src="images/lawyer-profile.jpg" alt="Av. Işın Nağme Evgin" class="img-fluid">
+                        <img  style="
+    margin-left: -20px;
+    margin-top: -20px;
+" src="images/lawyer-profile.jpg" alt="Av. Işın Nağme Evgin" class="img-fluid">
                     </div>
                 </div>
                 <div class="col-md-6">
